   <?php
   require_once __DIR__ ."/User.php";
   class Reader extends User {
    
    
    
}